--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "com.mitay-walle.gradient-texture",
-  "version": "1.0.7",
+  "name": "com.fleity.gradient-texture",
+  "version": "1.1.0",
   "displayName": "Gradient Texture",
-  "description": "Unity Procedural gradient texture generator \n\nTexture2D-Gradient generated dynamicly at Editor-time, by ScriptableObject with Gradient-properties",
+  "description": "Unity gradient texture generator \n\nTexture2D-Gradient generated in Editor by ScriptableObject with Gradient-properties.",
   "unity": "2018.4",
-  "documentationUrl": "https://github.com/mitay-walle/GradientTexture/blob/main/README.md",
-  "licensesUrl": "https://github.com/mitay-walle/GradientTexture/blob/main/LICENSE.md",
+  "documentationUrl": "https://github.com/fleity/GradientTexture/blob/main/README.md",
+  "licensesUrl": "https://github.com/fleity/GradientTexture/blob/main/LICENSE.md",
   "keywords": [
     "Texture",
     "Procedural",
     "Gradient"
   ],
-  "author": "mitay-walle <mitay-walle91@mail.ru> (https://github.com/mitay-walle)",
+  "author": "mitay-walle <mitay-walle91@mail.ru> (https://github.com/mitay-walle), fleity (https://github.com/fleity)",
   "samples": [
     {
       "displayName": "Example Gradients",
@@ -24,11 +24,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mitay-walle/GradientTexture.git"
+    "url": "git://github.com/fleity/GradientTexture.git"
   },
   "bugs": {
-    "url": "https://github.com/mitay-walle/GradientTexture/issues"
+    "url": "https://github.com/fleity/GradientTexture/issues"
   },
-  "homepage": "https://github.com/mitay-walle/GradientTexture#readme",
+  "homepage": "https://github.com/fleity/GradientTexture#readme",
   "license": "MIT"
 }
