--- a/Runtime/GradientTexture.Runtime.asmdef
+++ b/Runtime/GradientTexture.Runtime.asmdef
@@ -1,10 +1,7 @@
 {
-    "name": "GradientTextureAssembly",
+    "name": "GradientTexture.Runtime",
     "rootNamespace": "Packages.GradientTextureGenerator.Runtime",
-    "references": [
-        "GUID:343deaaf83e0cee4ca978e7df0b80d21",
-        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
